# neural-cpp

./: CMakeLists.txt  README.md
include/: activation_functions.hpp  layer.hpp  loss_functions.hpp  neural_network.hpp  neuron.hpp  weight_utils.hpp
src/: activation_functions.cpp  layer.cpp  loss_functions.cpp  main.cpp  neural_network.cpp  neuron.cpp  weight_utils.cpp
